# tft-stellar

./: .gitignore  LICENSE  README.md  development.md  package.py  package.toml  pyproject.toml
.github/workflows/: publish_container_images.yml
actors/: conversion_service.py  unlock_service.py
bridge/: go.mod
docker/: readme.md
docs/: address_activation.md  brandedTokens.md  faq.md  lockedFunds.md  lockedfunds_details.md  migrationFaq.md  runningtheservices.md  statistics.md  transaction_funding.md  transaction_funding.plantuml  vesting.md  why_move.md
eth-bridge/: .gitignore  Makefile  genesis.json  go.mod  go.sum  main.go  readme.md
faucet-frontend/: README.md
lib/: tfchainexplorer.py
models/: unlockhash_transaction.toml
scripts/: brandedtoken.md  brandedtoken.py  prodbrandedtokens.py  publishdomain.py  readme.md  renamebrandedtokens.py  requirements.txt  stellarconstants.py  timelocked.py  tokensissuances.py
signers/: Makefile  client.go  go.mod  go.sum  protocol.go
specs/: address_activation.md  address_activation.plantuml  create_TFTA.md  service_accounts.md
tf-vesting/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html
tfta_to tft/: readme.md  tft_issuer.py
tfta_to_tft/: readme.md  tft_issuer.py
unlock_service/: unlock_service.py
unvesting/: .gitignore  README.md  go.mod  go.sum  main.go  signed_unvesting_transactions.txt  unvesting_transactions.txt
unvesting-app/: .gitignore  README.md  index.html  package.json  vite.config.ts
wiki/: wiki_3bot_connect_wallet.md  wiki_token_migration.md  wiki_tokens_on_stellar.md
(+663 files in other folders)
