[tool.poetry]
name = "tft-stellar"
version = "1.4.14"
description = ""
authors = ["Rob Van Mieghem <rob@threefold.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
js-sdk = "^11.5b19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
